--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/niconne": "^5.0.12",
     "framer-motion": "^11.0.14",
+    "lucide-react": "^0.359.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
