--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@fontsource/niconne": "^5.0.12",
-    "framer-motion": "^11.0.14",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.20",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-use": "^17.5.0",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
